# MONUMENTAL

./: .gitignore  HANDOFF.md  PRUEFUNG.md  README.md  angabe.md  plan.md  restart-clean.sh  start-docker.sh  start.sh
brickbot-hmi/: index.html  package.json
brickbot-hmi/src/: App.tsx  index.css
brickbot-hmi/src/panels/: MissionPanel.tsx  RobotSelector.tsx  SensorPanel.tsx  TcpJogPanel.tsx  TeleopPanel.tsx  WallDrawPanel.tsx  WorldPromptPanel.tsx
brickbot-hmi/src/ros/: RosContext.tsx
brickbot-hmi/src/scene/: TwinScene.tsx
brickbot_docs/source/: ai_modules.rst  conf.py  index.rst  launch.rst  robots.rst
brickbot_ws/src/brickbot_bringup/: CMakeLists.txt  package.xml
brickbot_ws/src/brickbot_bringup/launch/: full_demo.launch.py
brickbot_ws/src/brickbot_control/: CMakeLists.txt  package.xml
brickbot_ws/src/brickbot_control/config/: controllers.yaml
brickbot_ws/src/brickbot_description/: CMakeLists.txt  package.xml
brickbot_ws/src/brickbot_description/launch/: view_robot.launch.py
brickbot_ws/src/brickbot_description/urdf/: arm_6dof.xacro  base_tracked.xacro  brickbot.ros2_control.xacro  brickbot.urdf.xacro  tool_gripper.xacro
brickbot_ws/src/brickbot_gazebo/: CMakeLists.txt  package.xml
brickbot_ws/src/brickbot_gazebo/launch/: spawn_robot.launch.py
brickbot_ws/src/brickbot_gazebo/worlds/: construction_site.sdf
brickbot_ws/src/brickbot_hmi_bridge/: package.xml  setup.cfg  setup.py
brickbot_ws/src/brickbot_hmi_bridge/brickbot_hmi_bridge/: tcp_linear_jog.py
brickbot_ws/src/brickbot_hmi_bridge/launch/: hmi.launch.py
brickbot_ws/src/brickbot_mcp/: package.xml  setup.cfg  setup.py
brickbot_ws/src/brickbot_mcp/brickbot_mcp/: server.py
brickbot_ws/src/brickbot_mission/: CMakeLists.txt  package.xml
brickbot_ws/src/brickbot_mission/action/: ApplyCement.action  BuildWall.action  PlaceBrick.action
brickbot_ws/src/brickbot_mission/bt_trees/: build_wall.xml
brickbot_ws/src/brickbot_moveit/: CMakeLists.txt  package.xml
brickbot_ws/src/brickbot_perception/: package.xml  setup.cfg  setup.py
brickbot_ws/src/brickbot_perception/launch/: perception.launch.py
brickbot_ws/src/brickbot_teleop/: CMakeLists.txt  package.xml
brickbot_ws/src/brickbot_teleop/launch/: teleop.launch.py
docker/: Dockerfile.hmi  Dockerfile.ros  docker-compose.yml  install_perception.sh
presentation/: vika_5_robot.3mf  vika_5_robot.glb  vika_robot.3mf  vika_robot.glb  vika_robot_v2.3mf  zwischenpraesentation_prompt.md
scripts/: RobotArm_6DOF.bas  export_robot.py  kill-all.sh  run_tests.sh  start-full.sh  start-gazebo.sh  start-moveit.sh  start.sh  stop.sh  view-arm.sh
vika-hmi/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
vika-hmi/public/: manifest.webmanifest
vika-hmi/public/meshes/arm/: assembly.stl  assembly_vika.stl  base.stl  link3.stl  link34_vika_combined.stl  link3_vika.stl  link4.stl  link4_vika.stl  link5.stl  link6.stl  motor.stl
vika-hmi/src/: App.tsx  index.css
vika-hmi/src/components/ui/: Panel.tsx
vika-hmi/src/input/: GamepadControl.tsx  tts.ts
vika-hmi/src/panels/: ControlPanel.tsx  JointSlidersPanel.tsx  MissionPanel.tsx  PromptCard.tsx  RailPanel.tsx  RobotSelector.tsx  RobotTabs.tsx  SensorPanel.tsx  TcpJogPanel.tsx  TeleopPanel.tsx  TouchJoysticks.tsx  WallDrawPanel.tsx  WorldPromptPanel.tsx  WristView.tsx
vika-hmi/src/ros/: RosContext.tsx
vika-hmi/src/scene/: BehaviorTreeView.tsx  GoogleTilesGround.tsx  IntroFlight.tsx  RobotTwinView.tsx  SatelliteMockView.tsx  TwinScene.tsx  btTree.ts  geo.ts
vika_docs/: Makefile
vika_docs/source/: ai_modules.rst  api_reference.rst  conf.py  hmi.rst  index.rst  installation.rst  introduction.rst  launch.rst  robots.rst  simulation.rst  use_case.rst
vika_ws/: .dp_parse.py  .pi_parse.py
vika_ws/src/vika_bringup/: CMakeLists.txt  package.xml
vika_ws/src/vika_bringup/launch/: full_demo.launch.py
vika_ws/src/vika_bringup/test/: e2e_check.py
vika_ws/src/vika_control/: CMakeLists.txt  package.xml
vika_ws/src/vika_control/config/: controllers_arm.yaml  controllers_robot_a.yaml  controllers_robot_b.yaml
vika_ws/src/vika_description/: CMakeLists.txt  package.xml
vika_ws/src/vika_gazebo/: CMakeLists.txt  package.xml
vika_ws/src/vika_gazebo/config/: bridge.yaml
vika_ws/src/vika_gazebo/launch/: spawn_robot.launch.py
vika_ws/src/vika_gazebo/models/: cement_strip.sdf  wall_brick.sdf  world_axes.sdf
vika_ws/src/vika_gazebo/scripts/: lay_cement.sh  lay_course.sh  refill_pallet.sh  reset_bricks.sh
vika_ws/src/vika_gazebo/worlds/: construction_site.sdf
vika_ws/src/vika_hmi_bridge/: package.xml  setup.cfg  setup.py
vika_ws/src/vika_hmi_bridge/launch/: hmi.launch.py
vika_ws/src/vika_mcp/: package.xml  setup.cfg  setup.py
vika_ws/src/vika_mission/: CMakeLists.txt  package.xml
vika_ws/src/vika_mission/action/: PickBrick.action
vika_ws/src/vika_moveit/: CMakeLists.txt  package.xml
vika_ws/src/vika_moveit/config/: arm_standalone.srdf  dual.srdf  dual_joint_limits.yaml  dual_kinematics.yaml  dual_moveit_controllers.yaml  dual_ros2_controllers.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  robot_a.srdf  robot_a_joint_limits.yaml  robot_a_moveit_controllers.yaml  robot_a_servo.yaml  robot_b.srdf  robot_b_joint_limits.yaml  robot_b_moveit_controllers.yaml  ros2_controllers.yaml  vika.srdf  vika_joint_limits.yaml  vika_moveit_controllers.yaml  vika_ros2_controllers.yaml
vika_ws/src/vika_moveit/launch/: arm_rviz_moveit.launch.py  robot_a_move_group.launch.py  robot_a_servo.launch.py  robot_b_move_group.launch.py  vika_dual.launch.py  vika_full.launch.py  vika_moveit.launch.py
vika_ws/src/vika_moveit/scripts/: arm_client.py  bt_node.py  build_wall.py  dino_detector.py  fold_arms.py  goto_brick.py  hmi_bridge.py  pick3_lift.py  pick3_reach.py  publish_scene.py  tcp_jog.py
vika_ws/src/vika_moveit/test/: test_config.py
vika_ws/src/vika_perception/: package.xml  setup.cfg  setup.py
vika_ws/src/vika_teleop/: CMakeLists.txt  package.xml
(+24 files in other folders)
