<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>brickbot_description</name>
  <version>0.1.0</version>
  <description>URDF/xacro models, meshes and RViz configs for BrickBot.</description>
  <maintainer email="eliasbitsch@hotmail.com">Elias Bitsch</maintainer>
  <author email="eliasbitsch@hotmail.com">Elias Bitsch</author>
  <author>Viktoriia Ovdiienko</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
