<?xml version="1.0"?>
<package format="3">
  <name>brickbot_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo Harmonic worlds, models and ros_gz bridge config for BrickBot.</description>
  <maintainer email="eliasbitsch@hotmail.com">Elias Bitsch</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>brickbot_description</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
