<?xml version="1.0"?>
<package format="3">
  <name>brickbot_mcp</name>
  <version>0.1.0</version>
  <description>MCP server letting Claude prompt the Gazebo world and mission stack.</description>
  <maintainer email="eliasbitsch@hotmail.com">Elias Bitsch</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
