<?xml version="1.0"?>
<package format="3">
  <name>brickbot_perception</name>
  <version>0.1.0</version>
  <description>CNN-based brick pose detection (YOLOv8) for BrickBot.</description>
  <maintainer email="eliasbitsch@hotmail.com">Elias Bitsch</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
