<?xml version="1.0"?>
<package format="3">
  <name>vika_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch files bringing up the full VIKA stack.</description>
  <maintainer email="eliasbitsch@hotmail.com">Elias Bitsch</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>vika_description</exec_depend>
  <exec_depend>vika_gazebo</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
