<?xml version="1.0"?>
<package format="3">
  <name>vika_control</name>
  <version>0.1.0</version>
  <description>ros2_control configuration for tracked base, arm and gripper controllers.</description>
  <maintainer email="eliasbitsch@hotmail.com">Elias Bitsch</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
