<?xml version="1.0"?>
<package format="3">
  <name>vika_hmi_bridge</name>
  <version>0.1.0</version>
  <description>HMI-side ROS2 services (TCP linear jog, tool swap, wall draw ingest).</description>
  <maintainer email="eliasbitsch@hotmail.com">Elias Bitsch</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbridge_suite</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
