<?xml version="1.0"?>
<package format="3">
  <name>vika_moveit</name>
  <version>0.1.0</version>
  <description>Placeholder MoveIt2 config — regenerate with MoveIt Setup Assistant once URDF stabilizes.</description>
  <maintainer email="eliasbitsch@hotmail.com">Elias Bitsch</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_servo</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
