<?xml version="1.0"?>
<package format="3">
  <name>vika_teleop</name>
  <version>0.1.0</version>
  <description>Gamepad teleop for base driving (wraps teleop_twist_joy).</description>
  <maintainer email="eliasbitsch@hotmail.com">Elias Bitsch</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
